--- a/tools/test-scripts/svntest/mod_dav_svn.conf
+++ b/tools/test-scripts/svntest/mod_dav_svn.conf
@@ -1,6 +1,7 @@
 <Location /svn-test-work/repositories>
     DAV svn
     SVNParentPath /home/YOUR_USERNAME/svn/obj-sh/subversion/tests/cmdline/svn-test-work/repositories
+    AuthzSVNAccessFile /home/YOUR_USERNAME/svn/obj-sh/subversion/tests/cmdline/svn-test-work/repositories
     AuthType Basic
     AuthName "SVN repos"
     AuthUserFile /home/YOUR_USERNAME/svn/dav_svn.passwd
@@ -10,6 +11,7 @@
 <Location /svn-test-work/local_tmp/repos>
     DAV svn
     SVNPath      /home/YOUR_USERNAME/svn/obj-sh/subversion/tests/cmdline/svn-test-work/local_tmp/repos
+    AuthzSVNAccessFile /home/YOUR_USERNAME/svn/obj-sh/subversion/tests/cmdline/svn-test-work/repositories
     AuthType Basic
     AuthName "SVN repos"
     AuthUserFile /home/YOUR_USERNAME/svn/dav_svn.passwd
