We don't use libsvn_client in svnsync, so stop linking to it and pulling in its header file.
* build.conf
  (svnsync): Remove dependency on libsvn_client.

* subversion/svnsync/main.c: Stop including svn_client.h.

--- a/build.conf
+++ b/build.conf
@@ -308,7 +308,7 @@ manpages = subversion/svnversion/svnversion.1
 description = Subversion repository replicator
 type = exe
 path = subversion/svnsync
-libs = libsvn_client libsvn_ra libsvn_delta libsvn_subr apr
+libs = libsvn_ra libsvn_delta libsvn_subr apr
 install = bin
 
 
