--- a/build.conf
+++ b/build.conf
@@ -395,7 +395,8 @@ include-runtime = yes
 type = swig_lib
 lang = python
 path = subversion/bindings/swig/python/libsvn_swig_py
-libs = libsvn_client libsvn_subr libsvn_delta libsvn_wc aprutil apriconv apr
+libs = libsvn_ra libsvn_client libsvn_subr libsvn_delta libsvn_wc
+       aprutil apriconv apr
 link-cmd = $(LINK) $(SWIG_PY_LIBS)
 install = swig-py-lib
 # need special build rule to include -DSWIGPYTHON
