Sync DocBook XML build machinery from the svnbook repository.
* doc/tools/Makefile.base-rules
* doc/tools/Makefile.base-vars
* doc/tools/bin/find-xsl.py
* doc/tools/dtd/dblite.dtd
* doc/tools/readme-dblite.html

* doc/design/Makefile, doc/misc-docs/Makefile: Tweaks consistent with the
    updated build machinery.

--- a/doc/design/Makefile
+++ b/doc/design/Makefile
@@ -1,3 +1,4 @@
 include ../tools/Makefile.base-vars
-NAME = design
+NAME = svn-design
+INSTALL_DIR = $(DESTDIR)/usr/share/doc/subversion
 include ../tools/Makefile.base-rules
