--- a/doc/misc-docs/Makefile
+++ b/doc/misc-docs/Makefile
@@ -1,3 +1,4 @@
 include ../tools/Makefile.base-vars
-NAME = misc-docs
+NAME = svn-misc-docs
+INSTALL_DIR = $(DESTDIR)/usr/share/doc/subversion
 include ../tools/Makefile.base-rules
