--- a/doc/design/Makefile
+++ b/doc/design/Makefile
@@ -1,4 +1,5 @@
 include ../tools/Makefile.base-vars
-NAME = svn-design
+NAME = design
+OUTNAME = svn-design
 INSTALL_DIR = $(DESTDIR)/usr/share/doc/subversion
 include ../tools/Makefile.base-rules
