--- a/doc/misc-docs/Makefile
+++ b/doc/misc-docs/Makefile
@@ -1,4 +1,5 @@
 include ../tools/Makefile.base-vars
-NAME = svn-misc-docs
+NAME = misc-docs
+OUTNAME = svn-misc-docs
 INSTALL_DIR = $(DESTDIR)/usr/share/doc/subversion
 include ../tools/Makefile.base-rules
