--- a/build.conf
+++ b/build.conf
@@ -308,7 +308,7 @@ manpages = subversion/svnversion/svnversion.1
 description = Subversion repository replicator
 type = exe
 path = subversion/svnsync
-libs = libsvn_ra libsvn_delta libsvn_subr apr
+libs = libsvn_subr libsvn_delta libsvn_ra apr
 install = bin
 
 
@@ -697,9 +697,8 @@ type = exe
 path = subversion/tests/libsvn_ra_local
 sources = ra-local-test.c
 install = test
-libs = libsvn_test libsvn_ra_local libsvn_ra
-       libsvn_fs libsvn_delta libsvn_subr
-       aprutil apriconv apr
+libs = libsvn_subr libsvn_delta libsvn_fs libsvn_test
+       libsvn_ra_local libsvn_ra aprutil apriconv apr
 
 # ----------------------------------------------------------------------------
 # These are not unit tests at all, they are small programs that exercise
