Update the Unix build system to link Cyrus SASL into svnserve, if Cyrus SASL is available.
NOTE: We don't actually use the Cyrus SASL library yet, but we are
      planning to do so.

Patch by: Vlad Georgescu <vgeorgescu@gmail.com>
Review by: me

 * build/ac-macros/sasl.m4: New file.

 * configure.in: Call SVN_LIB_SASL.

 * Makefile.in
   (SVN_SASL_LIBS): New AC_SUBSTed variables.
   (INCLUDES): Add SVN_SASL_INCLUDES.

 * aclocal.m4
   Add build/ac-macros/sasl.m4 to the list of supplementary macros.

 * build.conf
   (sasl): New entry.
   (libsvn_ra_svn, svnserve): Add sasl to the list of dependencies.

--- a/Makefile.in
+++ b/Makefile.in
@@ -43,6 +43,7 @@ SVN_APRUTIL_LIBS = @SVN_APRUTIL_LIBS@
 SVN_DB_LIBS =
 SVN_KEYCHAIN_LIBS = @SVN_KEYCHAIN_LIBS@
 SVN_SERF_LIBS = @SVN_SERF_LIBS@
+SVN_SASL_LIBS = @SVN_SASL_LIBS@
 
 LIBS = @LIBS@
 
@@ -99,7 +100,8 @@ LT_CXX_LIBADD = @LT_CXX_LIBADD@
 
 INCLUDES = -I$(top_srcdir)/subversion/include -I$(top_builddir)/subversion \
            @SVN_NEON_INCLUDES@ @SVN_KEYCHAIN_INCLUDES@ \
-           @SVN_APR_INCLUDES@ @SVN_APRUTIL_INCLUDES@ @SVN_SERF_INCLUDES@
+           @SVN_APR_INCLUDES@ @SVN_APRUTIL_INCLUDES@ @SVN_SERF_INCLUDES@ \
+           @SVN_SASL_INCLUDES@
 
 APACHE_INCLUDES = @APACHE_INCLUDES@
 APACHE_TARGET = @APACHE_TARGET@
