--- a/build.conf
+++ b/build.conf
@@ -231,7 +231,7 @@ msvc-static = yes
 type = ra-module
 path = subversion/libsvn_ra_svn
 install = ramod-lib
-libs = libsvn_delta libsvn_subr aprutil apriconv apr
+libs = libsvn_delta libsvn_subr aprutil apriconv apr sasl
 msvc-static = yes
 
 # Accessing repositories via direct libsvn_fs
@@ -293,7 +293,7 @@ path = subversion/svnserve
 install = bin
 manpages = subversion/svnserve/svnserve.8 subversion/svnserve/svnserve.conf.5
 libs = libsvn_repos libsvn_fs libsvn_delta libsvn_subr libsvn_ra_svn
-       aprutil apriconv apr
+       aprutil apriconv apr sasl
 msvc-libs = ws2_32.lib
 
 [svnversion]
@@ -796,6 +796,10 @@ msvc-name = libapriconv_ces_modules
 [bdb]
 type = lib
 external-lib = $(SVN_DB_LIBS)
+
+[sasl]
+type = lib
+external-lib = $(SVN_SASL_LIBS)
 
 [zlib]
 type = lib
