--- a/configure.in
+++ b/configure.in
@@ -59,7 +59,7 @@ dnl The specific reason we require APR 0.9.7 is:
 dnl   It contains fixes to its file writing routines
 dnl   now generating errors instead of silently ignoring
 dnl   them.  Only .7 and later can guarantee repository
-dnl   integrety with FSFS.
+dnl   integrity with FSFS.
 
 APR_VER_REGEXES=["0\.9\.[7-9] 0\.9\.1[0-9] 1\."]
 APU_VER_REGEXES=["0\.9\.[7-9] 0\.9\.1[0-9] 1\."]
