Fix Mac OS X static builds when Keychain is in use (as it is by default).
libtool 1.5.x doesn't track transitive dependencies for OS X frameworks,
so we need to pass the framework on every link line, not just when linking
the main client executable.

Do so by moving knowledge about the Keychain library out of build.conf and
into $LIBS in configure.

* Makefile.in
  Remove definition of SVN_KEYCHAIN_LIBS that build.conf used.
  Also remove SVN_KEYCHAIN_INCLUDES from INCLUDES, since it could never
  be non-empty.

* build.conf
  Remove the Keychain external library and the direct dependency from the
  'svn' executable.

* configure.in
  Add the Keychain -framework link-time options to LIBS rather than
  SVN_KEYCHAIN_LIBS, and remove SVN_KEYCHAIN_INCLUDES, which could never
  be set to a non-empty value.

--- a/Makefile.in
+++ b/Makefile.in
@@ -41,7 +41,6 @@ NEON_LIBS = @NEON_LIBS@
 SVN_APR_LIBS = @SVN_APR_LIBS@
 SVN_APRUTIL_LIBS = @SVN_APRUTIL_LIBS@
 SVN_DB_LIBS =
-SVN_KEYCHAIN_LIBS = @SVN_KEYCHAIN_LIBS@
 SVN_SERF_LIBS = @SVN_SERF_LIBS@
 SVN_SASL_LIBS = @SVN_SASL_LIBS@
 
@@ -99,7 +98,7 @@ LT_NO_UNDEFINED = @LT_NO_UNDEFINED@
 LT_CXX_LIBADD = @LT_CXX_LIBADD@
 
 INCLUDES = -I$(top_srcdir)/subversion/include -I$(top_builddir)/subversion \
-           @SVN_NEON_INCLUDES@ @SVN_KEYCHAIN_INCLUDES@ \
+           @SVN_NEON_INCLUDES@ \
            @SVN_APR_INCLUDES@ @SVN_APRUTIL_INCLUDES@ @SVN_SERF_INCLUDES@ \
            @SVN_SASL_INCLUDES@
 
