--- a/build.conf
+++ b/build.conf
@@ -116,7 +116,7 @@ description = Subversion Client
 type = exe
 path = subversion/svn
 libs = libsvn_client libsvn_wc libsvn_ra libsvn_delta libsvn_diff libsvn_subr
-       aprutil apriconv apr neon keychain
+       aprutil apriconv apr neon
 manpages = subversion/svn/svn.1
 install = bin
 
@@ -813,10 +813,6 @@ external-project = neon/neon
 libs = xml
 msvc-libs = ws2_32.lib
 msvc-static = yes
-
-[keychain]
-type = lib
-external-lib = $(SVN_KEYCHAIN_LIBS)
 
 [serf]
 type = lib
