Treat zlib more like other libraries by linking to it only where required, rather than unconditionally adding it to every link line.
* Makefile.in
  (SVN_ZLIB_LIBS): New.

* build.conf
  (libsvn_subr): Add a missing dependency on zlib.
  (zlib): Add 'external-lib', so that non-win32 build targets will link
    to SVN_ZLIB_LIBS when dependent upon zlib.

* configure.in
  Add the zlib library to SVN_ZLIB_LIBS instead of to LIBS.

--- a/build.conf
+++ b/build.conf
@@ -3,7 +3,7 @@
 #
 ######################################################################
 #
-# Copyright (c) 2000-2004 CollabNet.  All rights reserved.
+# Copyright (c) 2000-2006 CollabNet.  All rights reserved.
 #
 # This software is licensed as described in the file COPYING, which
 # you should have received as part of this distribution.  The terms
@@ -255,7 +255,7 @@ msvc-static = yes
 type = lib
 install = fsmod-lib
 path = subversion/libsvn_subr
-libs =  aprutil apriconv apr xml
+libs = aprutil apriconv apr xml zlib
 msvc-libs = advapi32.lib shfolder.lib
 msvc-static = yes
 
@@ -803,6 +803,7 @@ external-lib = $(SVN_SASL_LIBS)
 
 [zlib]
 type = lib
+external-lib = $(SVN_ZLIB_LIBS)
 external-project = build/win32/zlib
 msvc-static = yes
 
