Allow the path to a zlib install to be passed at configure-time via --with-zlib.
(MinGW does not include zlib by default.)

* build/ac-macros/zlib.m4
  (SVN_LIB_Z): New file to contain zlib detection macros plus --with-zlib
  support.
* configure.in: Move zlib checks to zlib.m4 and call SVN_LIB_Z macro.
* Makefile.in:
  (INCLUDES): add SVN_ZLIB_INCLUDES.
  (SVN_ZLIB_PREFIX, SVN_ZLIB_INCLUDES): Define.
* aclocal.m4: Pull in the new zlib.m4.

--- a/configure.in
+++ b/configure.in
@@ -471,12 +471,7 @@ AC_HELP_STRING([--with-editor=PATH],
 
 ])
 
-AC_CHECK_HEADER(zlib.h, [
-           AC_CHECK_LIB(z, inflate, [
-               SVN_ZLIB_LIBS="-lz"
-           ], [AC_MSG_ERROR([subversion requires zlib])])
-       ], [AC_MSG_ERROR([subversion requires zlib])])
-AC_SUBST(SVN_ZLIB_LIBS)
+SVN_LIB_Z
 
 MOD_ACTIVATION="-a"
 AC_ARG_ENABLE(mod-activation,
