--- a/Makefile.in
+++ b/Makefile.in
@@ -101,7 +101,7 @@ LT_CXX_LIBADD = @LT_CXX_LIBADD@
 INCLUDES = -I$(top_srcdir)/subversion/include -I$(top_builddir)/subversion \
            @SVN_NEON_INCLUDES@ \
            @SVN_APR_INCLUDES@ @SVN_APRUTIL_INCLUDES@ @SVN_SERF_INCLUDES@ \
-           @SVN_SASL_INCLUDES@
+           @SVN_SASL_INCLUDES@ @SVN_ZLIB_INCLUDES@
 
 APACHE_INCLUDES = @APACHE_INCLUDES@
 APACHE_TARGET = @APACHE_TARGET@
@@ -131,6 +131,9 @@ SVN_APRUTIL_PREFIX = @SVN_APRUTIL_PREFIX@
 
 SVN_SERF_INCLUDES = @SVN_SERF_INCLUDES@
 SVN_SERF_PREFIX = @SVN_SERF_PREFIX@
+
+SVN_ZLIB_PREFIX = @SVN_ZLIB_PREFIX@
+SVN_ZLIB_INCLUDES = @SVN_ZLIB_INCLUDES@
 
 MKDIR = @MKDIR@
 
