--- a/build.conf
+++ b/build.conf
@@ -110,13 +110,32 @@ swig-checkout-files = common.swg swigrun.swg runtime.swg
 # BUILD TARGETS
 #
 
+# Explanation for the seemingly-spurious mention of 'neon' in the libs lines
+# for svn, svnsync, and ra-local-test:
+# This is a workaround for a libtool bug, which manifests on Linux and similar
+# ELF platforms, when linking to an installed Neon, and there are old
+# Subversion libraries in the same directory as the installed Neon.  In such
+# cases, the run-before-installing version of the executables (.libs/lt-foo),
+# gets given an ELF RPATH which includes the install directory *before* all the
+# uninstalled libsvn_foo/.libs directories have been mentioned.  This occurs
+# because when libtool is at the point of handling Neon, it adds an RPATH entry
+# pointing to its directory, but fails to correctly consider that it should
+# prioritize all the RPATH entries for *un*installed libraries before all those
+# for installed libraries, to avoid this bug.  As a kludgy workaround, we add
+# a mention of 'neon' to the end of the libs lines for executables which
+# indirectly link to libsvn_ra_dav, which has the effect of 'pulling' the
+# harmful RPATH entry toward the end of RPATH, enabling the executables to run
+# correctly before installation, even when old versions of the Subversion
+# libraries are present.
+# This bug was last confirmed to be present in libtool 1.5.22.
+
 # The subversion command-line client
 [svn]
 description = Subversion Client
 type = exe
 path = subversion/svn
 libs = libsvn_client libsvn_wc libsvn_ra libsvn_delta libsvn_diff libsvn_subr
-       apriconv apr
+       apriconv apr neon
 manpages = subversion/svn/svn.1
 install = bin
 
@@ -306,7 +325,7 @@ manpages = subversion/svnversion/svnversion.1
 description = Subversion repository replicator
 type = exe
 path = subversion/svnsync
-libs = libsvn_ra libsvn_delta libsvn_subr apr
+libs = libsvn_ra libsvn_delta libsvn_subr apr neon
 install = bin
 
 
@@ -691,7 +710,7 @@ path = subversion/tests/libsvn_ra_local
 sources = ra-local-test.c
 install = test
 libs = libsvn_test libsvn_ra_local libsvn_ra libsvn_fs libsvn_delta libsvn_subr
-       apriconv apr
+       apriconv apr neon
 
 # ----------------------------------------------------------------------------
 # These are not unit tests at all, they are small programs that exercise
