Follow up to r20701. Apply same fix to contrib targets too.
* build.conf (svn-push, mucc): Add neon to libs.

--- a/build.conf
+++ b/build.conf
@@ -111,7 +111,7 @@ swig-checkout-files = common.swg swigrun.swg runtime.swg
 #
 
 # Explanation for the seemingly-spurious mention of 'neon' in the libs lines
-# for svn, svnsync, and ra-local-test:
+# for svn, svnsync, ra-local-test, svn-push and mucc:
 # This is a workaround for a libtool bug, which manifests on Linux and similar
 # ELF platforms, when linking to an installed Neon, and there are old
 # Subversion libraries in the same directory as the installed Neon.  In such
@@ -890,14 +890,14 @@ type = exe
 path = contrib/client-side/svn-push
 sources = svn-push.c
 install = contrib
-libs = libsvn_ra libsvn_delta libsvn_subr apriconv apr
+libs = libsvn_ra libsvn_delta libsvn_subr apriconv apr neon
 
 [mucc]
 type = exe
 path = contrib/client-side
 sources = mucc.c
 install = contrib
-libs = libsvn_client libsvn_ra libsvn_subr apriconv apr
+libs = libsvn_client libsvn_ra libsvn_subr apriconv apr neon
 
 [diff]
 type = exe
