* build.conf: Place all the svn* executables consecutively, not split into two     sections for no reason.  Place swig_core module before the rest.     Fix erroneous comments.

--- a/build.conf
+++ b/build.conf
@@ -166,6 +166,31 @@ install = bin
 manpages = subversion/svnlook/svnlook.1
 libs = libsvn_repos libsvn_fs libsvn_delta libsvn_diff libsvn_subr apriconv apr
 
+[svnserve]
+description = Subversion Server
+type = exe
+path = subversion/svnserve
+install = bin
+manpages = subversion/svnserve/svnserve.8 subversion/svnserve/svnserve.conf.5
+libs = libsvn_repos libsvn_fs libsvn_delta libsvn_subr libsvn_ra_svn
+       apriconv apr sasl
+msvc-libs = ws2_32.lib
+
+[svnsync]
+description = Subversion repository replicator
+type = exe
+path = subversion/svnsync
+libs = libsvn_ra libsvn_delta libsvn_subr apr neon
+install = bin
+
+[svnversion]
+description = Subversion Revision Extractor
+type = exe
+path = subversion/svnversion
+libs = libsvn_wc libsvn_subr apriconv apr
+install = bin
+manpages = subversion/svnversion/svnversion.1
+
 # Library needed by all subversion clients
 [libsvn_client]
 type = lib
@@ -303,31 +328,6 @@ libs = libsvn_repos libsvn_subr
 install = apache-mod
 msvc-libs = libhttpd.lib
 
-[svnserve]
-description = Subversion Server
-type = exe
-path = subversion/svnserve
-install = bin
-manpages = subversion/svnserve/svnserve.8 subversion/svnserve/svnserve.conf.5
-libs = libsvn_repos libsvn_fs libsvn_delta libsvn_subr libsvn_ra_svn
-       apriconv apr sasl
-msvc-libs = ws2_32.lib
-
-[svnversion]
-description = Subversion Revision Extractor
-type = exe
-path = subversion/svnversion
-libs = libsvn_wc libsvn_subr apriconv apr
-install = bin
-manpages = subversion/svnversion/svnversion.1
-
-[svnsync]
-description = Subversion repository replicator
-type = exe
-path = subversion/svnsync
-libs = libsvn_ra libsvn_delta libsvn_subr apr neon
-install = bin
-
 
 # ----------------------------------------------------------------------------
 #
@@ -343,6 +343,15 @@ external-project = build/win32/svn_locale
 #
 # TARGETS FOR SWIG SUPPORT
 #
+
+[swig_core]
+type = swig
+path = subversion/bindings/swig
+sources = core.i
+libs = libsvn_swig_py libsvn_swig_perl libsvn_swig_ruby
+       libsvn_diff libsvn_subr apr
+description = Subversion core library bindings
+include-runtime = yes
 
 [swig_client]
 type = swig
@@ -397,15 +406,6 @@ libs = libsvn_swig_py libsvn_swig_perl libsvn_swig_ruby
        libsvn_wc libsvn_subr
 nonlibs = swig_core
 description = Subversion WC library bindings
-
-[swig_core]
-type = swig
-path = subversion/bindings/swig
-sources = core.i
-libs = libsvn_swig_py libsvn_swig_perl libsvn_swig_ruby
-       libsvn_diff libsvn_subr apr
-description = Subversion core library bindings
-include-runtime = yes
 
 # SWIG utility library for Python modules
 [libsvn_swig_py]
@@ -690,7 +690,7 @@ install = test
 libs = libsvn_test libsvn_delta libsvn_subr apriconv apr
 
 # ----------------------------------------------------------------------------
-# Tests for libsvn_repos
+# Tests for libsvn_diff
 
 [diff-diff3-test]
 description = Test the diff/diff3 library
@@ -701,7 +701,7 @@ install = test
 libs = libsvn_test libsvn_diff libsvn_subr apriconv apr
 
 # ----------------------------------------------------------------------------
-# Tests for libsvn_repos
+# Tests for libsvn_ra_local
 
 [ra-local-test]
 description = Test a few things in libsvn_ra_local
