mod_dav_svn: Move the four source files which exist solely to implement a REPORT handler into a reports/ subdirectory.
* build.conf (mod_dav_svn):
    Add 'sources' directive to include the moved source.

* subversion/mod_dav_svn/reports/: New directory.

* subversion/mod_dav_svn/file_revs.c: Move...
* subversion/mod_dav_svn/reports/file-revs.c: ...to here.
* subversion/mod_dav_svn/log.c: Move...
* subversion/mod_dav_svn/reports/log.c: ...to here.
* subversion/mod_dav_svn/replay.c: Move...
* subversion/mod_dav_svn/reports/replay.c: ...to here.
* subversion/mod_dav_svn/update.c: Move...
* subversion/mod_dav_svn/reports/update.c: ...to here.

--- a/build.conf
+++ b/build.conf
@@ -314,6 +314,7 @@ msvc-static = yes
 description = Subversion plug-in for the Apache DAV module
 type = apache-mod
 path = subversion/mod_dav_svn
+sources = *.c reports/*.c
 libs = libsvn_repos libsvn_fs libsvn_delta libsvn_subr
 nonlibs = apr aprutil
 install = apache-mod
