Add a manpage for svnsync.
Patch by: David Glasser <glasser@mit.edu>

* subversion/svnsync/svnsync.1
  New file.

* build.conf
  (svnsync): Set the 'manpages' section variable.

--- a/build.conf
+++ b/build.conf
@@ -182,6 +182,7 @@ type = exe
 path = subversion/svnsync
 libs = libsvn_ra libsvn_delta libsvn_subr apr neon
 install = bin
+manpages = subversion/svnsync/svnsync.1
 
 [svnversion]
 description = Subversion Revision Extractor
