--- a/build.conf
+++ b/build.conf
@@ -329,6 +329,7 @@ type = exe
 path = subversion/svnsync
 libs = libsvn_ra libsvn_delta libsvn_subr apr neon
 install = bin
+manpages = subversion/svnversion/svnsync.1
 
 
 # ----------------------------------------------------------------------------
