Extract the atomic initialization code from libsvn_fs_base/bdb/env.c and convert it to a generic implementation that can be used to initialize other libraries (*cough* Cyrus SASL *cough*). Make bdb use the new implementation.
Patch by: Vlad Georgescu <vgeorgescu@gmail.com>
Tweaked by: me

* build.conf
  (options): Add subversion/include/private/*.h to private-includes.

* subversion/include/private/svn_atomic.h: New file.

* subversion/libsvn_subr/atomic.c: New file.

* subversion/libsvn_fs_base/bdb/env.c
  Include svn_atomic.h instead of apr_atomic.h.
  (svn__atomic_t,
   svn__atomic_read,
   svn__atomic_set,
   svn__atomic_cas): These are now in subversion/include/svn_atomic.h
   and have a single underscore. All calls were changed to reflect this.
  (BDB_CACHE_UNINITIALIZED,
   BDB_CACHE_START_INIT,
   BDB_CACHE_INIT_FAILED,
   BDB_CACHE_INITIALIZED): Deleted. Similar definitions are now in atomic.c.
  (bdb_cache_state): This is no longer declared inside an #ifdef
   APR_HAS_THREADS, and is no longer explicitly initialized.
  (svn_fs_bdb__init_cb): New function. Contains bdb-specific initialization.
  (svn_fs_bdb__init): Call svn_atomic_init_once().

--- a/build.conf
+++ b/build.conf
@@ -28,6 +28,7 @@
 includes = subversion/include/*.h
 include-wildcards = *.h *.i *.swg
 private-includes =
+        subversion/include/private/*.h
         subversion/bindings/swig/include/*.swg
         subversion/libsvn_delta/compose_delta.c
 private-built-includes =
