* tools/hook-scripts/mailer/mailer.py   Extend to_addr parsing by the possibility to specify a different split   character by enhancing the to_addr parameter with a leading '[.]'   where '.' is the character that should be used instead of the default   whitespaces.
* tools/hook-scripts/mailer/mailer.conf.example
  Add a note to the comment for the to_addr parameter to reflect the
  above mentioned extension of this parameter.

--- a/tools/hook-scripts/mailer/mailer.conf.example
+++ b/tools/hook-scripts/mailer/mailer.conf.example
@@ -167,7 +167,10 @@ unlock_subject_prefix =
 from_addr = invalid@example.com
 
 # The default To: addresses for message.  One or more addresses,
-# separated by whitespace (no commas):
+# separated by whitespace (no commas).
+# NOTE: If you want to use a different character for separating the
+#       addresses put it in front of the addresses included in square
+#       brackets '[ ]'.
 to_addr = invalid@example.com
 
 # If this is set, then a Reply-To: will be inserted into the message.
