--- a/tools/hook-scripts/mailer/mailer.conf.example
+++ b/tools/hook-scripts/mailer/mailer.conf.example
@@ -177,13 +177,20 @@ to_addr = invalid@example.com
 reply_to =
 
 # Specify which types of repository changes mailer.py will create
-# diffs for.  Valid options are any combination of
+# diffs for. Valid options are any combination of
 # 'add copy modify delete', or 'none' to never create diffs.
 # If the generate_diffs option is empty, the selection is controlled
 # by the deprecated options suppress_deletes and suppress_adds.
-# Note that only affects the display of diffs - all changes are
+# Note that this only affects the display of diffs - all changes are
 # mentioned in the summary of changed paths at the top of the message,
 # regardless of this option's value.
+# Meaning of the possible values:
+# add:    generates diffs for all added paths
+# copy:   generates diffs for all copied paths
+#         which were not changed after copying
+# modify: generates diffs for all modified paths, including paths that were
+#         copied and modified afterwards (within the same commit)
+# delete: generates diffs for all removed paths
 generate_diffs = add copy modify
 
 # Diff URL construction.  For the configured diff URL types, the diff
